<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/triggerStr"
    />
    <Spinner 
        android:id="@+id/trigger"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/trigger_prompt"
    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/actionStr"
    />
    <Spinner 
        android:id="@+id/action"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/action_prompt"
    />
   <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/button_text"
        android:onClick="onButtonClicked"/>

</LinearLayout>
